<resources>
    <string name="app_name">Electronics Assessment Tool</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_school_code">School code</string>
    <string name="prompt_teacher_code">Teacher code</string>
    <string name="prompt_test_title">Test title</string>
    <string name="prompt_num_of_q">Number of questions</string>
    <string name="prompt_question">Question</string>
    <string name="prompt_answer">Answer</string>
    <string name="label_user_type">User type</string>
    <string name="label_q1">Question 1</string>
    <string name="label_q2">Question 2</string>
    <string name="label_q3">Question 3</string>
    <string name="label_q4">Question 4</string>
    <string name="label_q5">Question 5</string>
    <string name="action_create_account">Create account</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_attempt_test">Attempt test</string>
    <string name="action_update_profile">Update profile</string>
    <string name="action_reset_password">Reset password</string>
    <string name="action_upload_test">Upload test</string>
    <string name="action_finish_test">Finish test</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete_test">Delete test</string>
    <string name="action_update_test">Update test</string>
    <string name="action_remove_picture">Remove profile picture</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_empty">Fields cannot be empty!</string>
    <string name="invalid_email">Email is not valid!</string>
    <string name="invalid_password_length">Password has to be at least 8 characters!</string>
    <string name="invalid_spinner">No account type selected!</string>
    <string name="authentication_failed">"Authentication failed"</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="label_your_account">Your account for %1$s</string>
    <string name="update_success">Account updated successfully!</string>
    <string name="update_failure">Account update failed!</string>
    <string name="update_profile">Picture uploaded successfully!</string>
    <string name="update_profile_failure">Picture upload unsuccessful</string>
    <string name="pref_profile_update_title">Update profile</string>
    <string name="test_upload_success">Test uploaded successfully!</string>
    <string name="test_upload_failed">Test upload failed!</string>
    <string name="test_delete_success">Test deleted successfully!</string>
    <string name="test_delete_failure">Test delete failed!</string>
    <string name="test_result_success">Results saved successfully!</string>
    <string name="test_result_failure">A problem has occurred while saving results</string>
    <string name="pref_profile_update_summary">Change account info</string>
    <string name="text_reset_password">Are you sure you want to send password reset email to %1$s?</string>
    <string name="text_delete_test">Are you sure you want to delete test %1$s?</string>
    <string name="text_update_test">Are you sure you want to update test?</string>
    <string name="text_finish_test">Are you sure you want to finish test?</string>
    <string name="text_update_profile">Are you sure you want to update profile?</string>
    <string name="text_remove_picture">Are you sure you want to remove your profile picture?</string>
    <string name="image_description_empty">Empty adapter</string>

    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_testcreator">Test creator</string>
    <string name="menu_analytics">Analytics</string>
    <string name="menu_manage_students">Manage Students</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_log_out">Log out</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="account_types">
        <item>Student</item>
        <item>Teacher</item>
    </string-array>

    <string-array name="number_of_q">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
</resources>
