<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard_24dp"
            android:title="@string/menu_dashboard" />
        <item
            android:id="@+id/nav_analytics"
            android:icon="@drawable/ic_show_chart_24dp"
            android:title="@string/menu_analytics" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_24dp"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_log_out"
            android:icon="@drawable/ic_exit_to_app_24dp"
            android:title="@string/menu_log_out" />
    </group>
</menu>
