<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".acitivities.LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:background="@drawable/login_background_gradient"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            tools:ignore="ContentDescription" />
        <ImageView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            tools:ignore="ContentDescription" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:padding="15dp"
            android:background="@color/cardview_light_background"
            android:orientation="vertical"
            tools:ignore="PrivateResource,UselessParent">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/prompt_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_edit_text"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/prompt_password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_edit_text"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <mehdi.sakout.fancybuttons.FancyButton
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp"
                fancy:fb_borderColor="#FFFFFF"
                fancy:fb_borderWidth="1dp"
                fancy:fb_defaultColor="@color/colorPrimary"
                fancy:fb_focusColor="@color/colorPrimaryDark"
                fancy:fb_radius="30dp"
                fancy:fb_text="@string/action_sign_in"
                fancy:fb_textColor="@android:color/white"/>

            <mehdi.sakout.fancybuttons.FancyButton
                android:id="@+id/signupButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp"
                fancy:fb_borderColor="#FFFFFF"
                fancy:fb_borderWidth="1dp"
                fancy:fb_defaultColor="@color/colorPrimary"
                fancy:fb_focusColor="@color/colorPrimaryDark"
                fancy:fb_radius="30dp"
                fancy:fb_text="@string/action_sign_up"
                fancy:fb_textColor="@android:color/white"/>

        </LinearLayout>
    </LinearLayout>
    <ImageView
        android:id="@+id/iconImage"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/ic_launcher_round"
        android:background="@drawable/background_white"
        android:padding="5dp"
        android:layout_width="70dp"
        android:layout_height="70dp"
        tools:ignore="ContentDescription" />

    <TextView
        android:textSize="20sp"
        android:textColor="#FFF"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/iconImage"
        android:text="@string/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</RelativeLayout>